error messages
  File "/home/cnc-machine-2/CapstoneUI/UI.py", line 16
    from pymodbus.client import ModbusTcpClient
SyntaxError: expected 'except' or 'finally' block


(venv) cnc-machine-2@CNC-1:~/CapstoneUI $ grep "fault" UI.py
# Give both sides a static IP on the same /24. Default here assumes
# Default TCP settings — override in ScanToMillUI if needed.
                "fault":        bool(status_word & STATUS_FAULT),
        flag_keys = ("ready", "moving", "homed", "fault", "scanning")
        if status.get("fault") and not prev.get("fault"):
            self._log(f"[MODBUS] !! FAULT code {status['fault_code']}")
(venv) cnc-machine-2@CNC-1:~/CapstoneUI $ git pull
remote: Enumerating objects: 5, done.
remote: Counting objects: 100% (5/5), done.
remote: Compressing objects: 100% (3/3), done.
remote: Total 3 (delta 2), reused 0 (delta 0), pack-reused 0 (from 0)
Unpacking objects: 100% (3/3), 1.01 KiB | 1.01 MiB/s, done.
From https://github.com/Frosty-Animal/CapstoneUI
   e085e87..b925278  main       -> origin/main
Already up to date.
(venv) cnc-machine-2@CNC-1:~/CapstoneUI $ python3 UI.py
Traceback (most recent call last):
  File "/home/cnc-machine-2/CapstoneUI/UI.py", line 663, in _on_modbus_status
    self._log(f"[MODBUS] !! FAULT code {status['fault_code']}")
                                        ~~~~~~^^^^^^^^^^^^^^
KeyError: 


(venv) cnc-machine-2@CNC-1:~/CapstoneUI $ stat ~/CapstoneUI/UI.py
  File: /home/cnc-machine-2/CapstoneUI/UI.py
  Size: 38010     	Blocks: 80         IO Block: 4096   regular file
Device: 179,2	Inode: 663165      Links: 1
Access: (0664/-rw-rw-r--)  Uid: ( 1000/cnc-machine-2)   Gid: ( 1000/cnc-machine-2)
Access: 2026-04-10 04:29:19.811501444 -0500
Modify: 2026-04-10 04:29:19.811501444 -0500
Change: 2026-04-10 04:29:19.811501444 -0500
 Birth: 2026-04-10 04:29:19.811501444 -0500

[17:14:55]  [SYS] Scan-to-Mill UI initialized.
[17:14:55]  [SYS] Waiting for hardware connection...
[17:14:55]  [MODBUS] Connecting to ClearCore at 192.168.1.20:502...
[17:14:55]  [VIZ] Viewport ready — awaiting camera stream
[17:14:55]  [VIZ] _init_viewport completed successfully
[17:14:55]  [MODBUS] ClearCore link ESTABLISHED.
[17:14:55]  [MODBUS] Link up to ClearCore at 192.168.1.20:502, slave id 1
[17:14:55]  [MODBUS] STATUS: READY  pos=0
[17:14:55]  [CC] PI CONNECTED
[17:15:13]  [SCAN] Initializing depth sensor...
[17:15:13]  [SCAN] Stream started at 640x480 @ 30fps
[17:15:15]  [SCAN] 25% — front face captured
[17:15:17]  [SCAN] 50% — rotating to side profile
[17:15:19]  [SCAN] 75% — top surface acquired
[17:15:21]  [MODBUS] Write exception: Modbus Error: [Input/Output] No response received after 3 retries, continue with next request
[17:15:21]  [MODBUS] STATUS: READY MOVING SCANNING  pos=-190
[17:15:21]  [CC] SEQ1: homing
[17:15:21]  [SCAN] Complete — 4700 points captured
[17:15:21]  [SYS] Post-processing options unlocked.
[17:15:30]  [CC] HOMED - starting scan
[17:15:36]  [MODBUS] STATUS: FAULT ESTOP  pos=11747
[17:15:36]  [MODBUS] !! FAULT latched
[17:15:36]  [SYS] !! EMERGENCY STOP ENGAGED !!
[17:15:36]  [CC] E-STOP ENGAGED
[17:15:40]  [MODBUS] STATUS: READY  pos=11747
[17:15:40]  [SYS] E-stop released. System disarmed — press START to resume.
[17:15:40]  [CC] E-STOP CLEARED - press ENABLE to rearm
[17:15:40]  [MODBUS] → CMD 1
[17:15:40]  [CC] MOTORS ENABLED
[17:15:42]  [SCAN] Initializing depth sensor...
[17:15:42]  [SCAN] Stream started at 640x480 @ 30fps
[17:15:44]  [SCAN] 25% — front face captured
[17:15:46]  [SCAN] 50% — rotating to side profile
[17:15:48]  [SCAN] 75% — top surface acquired
[17:15:50]  [MODBUS] Write exception: Modbus Error: [Input/Output] No response received after 3 retries, continue with next request
[17:15:50]  [MODBUS] STATUS: READY FAULT  pos=0
[17:15:50]  [MODBUS] !! FAULT latched
[17:15:50]  [CC] HOME FAIL - no limit hit
[17:15:50]  [SCAN] Complete — 4700 points captured
[17:15:50]  [SYS] Post-processing options unlocked.

[17:10:41]  [MODBUS] Write exception: Modbus Error: [Input/Output] No response received after 3 retries, continue with next request
